--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk"
+    "format": "prettier --write .",
   },
   "devDependencies": {
     "@types/jest": "^29.5.4",
     "@types/node": "20.5.9",
     "jest": "^29.6.4",
+    "prettier": "^3.1.0",
     "ts-jest": "^29.1.1",
     "aws-cdk": "2.96.2",
     "ts-node": "^10.9.1",
