--- a/package.json
+++ b/package.json
@@ -8,22 +8,26 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
     "format": "prettier --write .",
+    "start": "node src/app.js",
+    "start:dev": "ts-node src/app.ts"
   },
   "devDependencies": {
     "@types/jest": "^29.5.4",
     "@types/node": "20.5.9",
+    "aws-cdk": "2.96.2",
+    "dotenv": "^16.3.1",
     "jest": "^29.6.4",
     "prettier": "^3.1.0",
     "ts-jest": "^29.1.1",
-    "aws-cdk": "2.96.2",
     "ts-node": "^10.9.1",
     "typescript": "~5.2.2"
   },
   "dependencies": {
     "aws-cdk-lib": "2.96.2",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "web3": "^4.2.2"
   }
 }
